src/objects/Relationship__c.object
<CustomObject>
    <description>For Org to Org relationships</description>
    <fields>
        <fullName>Active__c</fullName>
        <formula>NOT( End_Date__c &lt; TODAY()) || ISBLANK(End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Ending date for the Relationship</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDM_ID__c</fullName>
        <label>MDM ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Providers</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Title__c</fullName>
        <description>Title of the Service Provider&apos;s primary contact.</description>
        <formula>Primary_Contact__r.Title</formula>
        <label>Primary Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mutual Clients</relationshipLabel>
        <relationshipName>Service_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type__c</field>
                <operation>equals</operation>
                <value>Service Provider, Investment Consultant</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Mutual Clients</relationshipLabel>
        <relationshipName>Child</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date for the Relationship</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Actuary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clearing Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracting Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custodian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Dilligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Asset Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lending Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization Investment Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Keeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Cost Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Service Provider</label>
    <nameField>
        <displayFormat>RN-{00000}</displayFormat>
        <label>Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Providers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>